2017-08-28 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-772

	* ChangeLog: Missed save from prev commit.

2017-08-28 Jana Mendrok  <jana.mendrok@chalmers.se>

	* arts-2-3-771

	* src/m_microphysics.cc, methods.cc (pndFromPsd):
	New, extended WSM for psd-to-pnd conversion including some checks that
	main part of bulk properties is covered by the chosen size grid (and
	corresponding scat_data).

	(pndAdjustFromScatMeta):
	Do not throw error if cloudbox is off (unless jacobians requested),
	just return.

2017-08-28 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-770

	* 3rdparty/invlib/*:
	- Fixed handling of log-output of m-form.

	* src/methods.cc:
	- Added Covmat1D and Markov1D workspace method for creation of correlation blocks
	  of the covariance matrix.

	* src/oem.cc:
	- Added m-form for linear and gauss-newton methods.

	* src/m_retrieval.cc:
	- Some fixed for Covmat1D and Markov1D

	* src/agenda_wrapper.h:
	- Fix bug in handling of precomputed Jacobian.

2017-08-26 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-769

	* src/arts_api.[h,cc]:
	- Some changes to the passing of input and output parameters of functions calls
	- Added methods for manipulation of agendas (agenda_add_method, agenda_insert_set,
	agenda_clear)

	* src/interactive_workspace.[h,cc]:
	- Adapted code to changes in arts_api.[h,cc]
	- Added set method for agenda variables

2017-08-25 Richard Larsson  <ric.larsson@gmail.com>

	* arts-2-3-768
	
	Work-in-progress.
	
	* src/linescaling.cc,h: Split the big function up into smaller parts,
	having their derivative functions explicit (but mostly only callable
	by themselves). 
	
	* src/lineshapesdata.cc,h:  Added the NLTE formulations
	
	* src/pressurebroadeningdata.cc,h:  Added the interface
	method for lineshapesdata
	
	* src/quantum.cc,h:  Added some simple matching logic
	
	* src/zeeman.cc:  Testing function commented out as it does nothing yet.
	